--- a/scss/fxj/_navbar-header.scss
+++ b/scss/fxj/_navbar-header.scss
@@ -7,7 +7,7 @@
   }
   .navbar-toggle {
     border: 0;
-    left: 15px;
+    left: 5px;
     position: absolute;
     top: 7px;
 
@@ -50,7 +50,7 @@
   .logo {
     display: block;
     height: 50px;
-    margin: 8px 15px 8px 70px;
+    margin: 8px 15px 8px 52px;
     padding: 0;
 
     img {
